--- a/package.yaml
+++ b/package.yaml
@@ -3,23 +3,28 @@ version: 0.1.0
 
 ghc-options: -Wall
 
-dependencies:
-  - base
-
 default-extensions:
+  - DeriveFunctor
   - DeriveGeneric
+  - FunctionalDependencies
   - LambdaCase
   - OverloadedStrings
+  - PatternSynonyms
+  - MultiParamTypeClasses
   - NoImplicitPrelude
   - ViewPatterns
+
+dependencies:
+  - base
+  - bytestring
+  - secret-sharing
+  - text
 
 library:
   source-dirs: src
   dependencies:
     - base64-bytestring
-    - bytestring
     - cryptohash-sha256
-    - secret-sharing
     - utf8-string
 
 executables:
@@ -27,21 +32,15 @@ executables:
     source-dirs: app
     main: Main.hs
     dependencies:
-      - base64-bytestring
-      - bytestring
+      - cryptonite
       - optparse-generic
       - QuickCheck
-      - secret-sharing
       - ssss
-      - text
 
 tests:
   props:
     source-dirs: test
     main: Props.hs
     dependencies:
-      - bytestring
       - QuickCheck
       - ssss
-      - secret-sharing
-      - text
