--- a/ssss.cabal
+++ b/ssss.cabal
@@ -19,8 +19,14 @@ library
     , text
     , base64-bytestring
     , cryptohash-sha256
+    , cryptonite
+    , exceptions
+    , memory
+    , streaming
+    , streaming-bytestring
     , utf8-string
   exposed-modules:
+      Crypto.Cipher.Salsa.Streaming
       Import
       Ssss
       Validation
@@ -40,7 +46,9 @@ executable ssss
     , cryptonite
     , optparse-generic
     , QuickCheck
+    , resourcet
     , ssss
+    , streaming-bytestring
   default-language: Haskell2010
 
 test-suite props
