--- a/ssss.cabal
+++ b/ssss.cabal
@@ -10,7 +10,8 @@ cabal-version:  >= 1.10
 library
   hs-source-dirs:
       src
-  default-extensions: DeriveFunctor DeriveGeneric FunctionalDependencies LambdaCase OverloadedStrings PatternSynonyms MultiParamTypeClasses NoImplicitPrelude ViewPatterns
+      src/extra
+  default-extensions: DeriveFunctor DeriveGeneric FlexibleInstances FunctionalDependencies LambdaCase OverloadedStrings PatternSynonyms MultiParamTypeClasses NoImplicitPrelude ViewPatterns
   ghc-options: -Wall
   build-depends:
       base
@@ -26,17 +27,24 @@ library
     , streaming-bytestring
     , utf8-string
   exposed-modules:
-      Crypto.Cipher.Salsa.Streaming
+      BytesClasses
       Import
       Ssss
-      Validation
+      Ssss.Decode
+      Ssss.Encode
+      Ssss.Exception
+      Ssss.Types
+      Ssss.Utils
+      Crypto.Cipher.Salsa.Streaming
+      Data.ByteString64
+      Data.Validation
   default-language: Haskell2010
 
 executable ssss
   main-is: Main.hs
   hs-source-dirs:
       app
-  default-extensions: DeriveFunctor DeriveGeneric FunctionalDependencies LambdaCase OverloadedStrings PatternSynonyms MultiParamTypeClasses NoImplicitPrelude ViewPatterns
+  default-extensions: DeriveFunctor DeriveGeneric FlexibleInstances FunctionalDependencies LambdaCase OverloadedStrings PatternSynonyms MultiParamTypeClasses NoImplicitPrelude ViewPatterns
   ghc-options: -Wall
   build-depends:
       base
@@ -56,7 +64,7 @@ test-suite props
   main-is: Props.hs
   hs-source-dirs:
       test
-  default-extensions: DeriveFunctor DeriveGeneric FunctionalDependencies LambdaCase OverloadedStrings PatternSynonyms MultiParamTypeClasses NoImplicitPrelude ViewPatterns
+  default-extensions: DeriveFunctor DeriveGeneric FlexibleInstances FunctionalDependencies LambdaCase OverloadedStrings PatternSynonyms MultiParamTypeClasses NoImplicitPrelude ViewPatterns
   ghc-options: -Wall
   build-depends:
       base
